<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:padding="@dimen/margin_tiny"
            android:text="@string/truth_or_dare"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="5.0">


            <LinearLayout
                android:id="@+id/layAddTruth"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:background="@drawable/background_effect"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_truth"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layAddDare"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_effect"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_dare"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/laySound"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_effect"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_sound" />

                <TextView
                    android:id="@+id/soundTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_on"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layShare"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_effect"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layClose"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_effect"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>



        </LinearLayout>


        <LinearLayout
            android:id="@+id/layFbAdsBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" />
    </RelativeLayout>




</RelativeLayout>