<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dailogBlue"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/margin_tiny"
        android:text="@string/truth_or_dare"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_playerTurnName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:shadowColor="@color/dark_grey"
        android:shadowDx="2.0"
        android:shadowDy="2.0"
        android:text="@string/score_card"
        android:textColor="@color/white"
        android:textSize="31sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvScoreCard"
        android:layout_width="fill_parent"
        android:layout_height="260dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:layout_weight="0.15"
        android:fadeScrollbars="false"
        android:fastScrollEnabled="true"
        android:listSelector="@android:color/transparent"
        android:scrollbarSize="12dp"
        android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
        android:scrollbarTrackVertical="@drawable/scrollbar_vertical_track" />

    <LinearLayout
        android:id="@+id/lastSection"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="140dp"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/background_effect"
                android:scaleType="centerInside" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>