<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:splitMotionEvents="false">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_h"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/txtBackDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_weight="1.0"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_medium"
            android:soundEffectsEnabled="true"
            android:text="@string/dialog_text"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/llbackYes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/background_effect"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:src="@drawable/ic_yes" />

                <TextView
                    android:id="@+id/backYes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/yes"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llbackNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/background_effect"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:src="@drawable/ic_no" />

                <TextView
                    android:id="@+id/backNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_effect"
                    android:gravity="center_vertical"
                    android:text="@string/no"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>