<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/dailogBlue"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_playerTurnName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/txt_size_large"
            android:shadowColor="@color/dark_grey"
            android:shadowDx="2.0"
            android:shadowDy="2.0"
            android:textColor="@color/white"
            android:textSize="31sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/txt_size_large"
            android:layout_marginRight="@dimen/txt_size_large"
            android:layout_marginBottom="@dimen/txt_size_large"
            android:padding="@dimen/txt_size_large"
            android:text="@string/question_here"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_large"
            android:textStyle="bold"
            android:typeface="sans" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:gravity="center">

                <com.example.truthordare.view.BounceImageButton
                    android:id="@+id/btnForfeit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_effect"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_sad" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forfeit"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <com.example.truthordare.view.BounceImageButton
                    android:id="@+id/btnDone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_effect" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_smile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>