<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/firstSection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAddPlayerTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_tiny"
            android:text="@string/title_add_players"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etPlayerName"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="@dimen/margin_tiny"
                android:layout_marginTop="@dimen/margin_tiny"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:layout_weight="1"
                android:background="@drawable/edittext_style"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
                android:maxLength="20"
                android:paddingLeft="12dp"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor" />

            <ImageView
                android:id="@+id/btnAdd"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="6dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_tiny"
                android:onClick="addPlayer"
                android:tint="@color/yellow"
                android:src="@drawable/add_btn"

                />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ListView
            android:id="@+id/lv_players"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:overScrollMode="never"
            android:padding="@dimen/margin_small" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lastSection"
        android:layout_width="fill_parent"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/layBack"
            android:layout_width="166dp"
            android:layout_height="42dp"
            android:layout_margin="12dp"
            android:background="@drawable/background_effect"
            android:gravity="center_vertical"
            android:onClick="startPlaying"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="24dp"
                android:src="@drawable/ic_back"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layPlay"
            android:layout_width="166dp"
            android:gravity="center_vertical"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_margin="12dp"
            android:background="@drawable/background_effect"
            android:onClick="startPlaying"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="24dp"
                android:src="@drawable/ic_lets_play"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lets_play"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layFbAdsBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
</LinearLayout>