<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gamePlayground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center">


        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_tiny"
            android:text="@string/truth_or_dare"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="102dp">

        <RelativeLayout
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:padding="12dp" />

        <com.example.truthordare.view.SpinningDrawableView
            android:id="@+id/spinBottleView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="60dp"
            android:background="@color/transparent" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adsLayout"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="166dp"
                android:layout_height="match_parent"
                >

                <com.example.truthordare.view.BounceImageButton
                    android:id="@+id/imgSound"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_effect" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_sound" />

                <TextView
                    android:id="@+id/soundTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_on"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginLeft="24dp"
                android:layout_width="166dp"
                android:layout_height="match_parent"
                >

                <com.example.truthordare.view.BounceImageButton
                    android:id="@+id/imgShare"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_effect"
                    android:onClick="openScore" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_score" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="6dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <com.example.truthordare.view.BounceImageButton
                    android:id="@+id/changeBottle"
                    android:layout_width="184dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/background_effect"
                    android:onClick="changeBottle"
                    android:scaleType="fitCenter" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/ic_bottle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/adsLayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:id="@+id/layFbAdsBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>


</RelativeLayout>